@@ -1,3 +1,10 @@
+2007-02-05  Reinhard Max  <max@suse.de>
+
+	* tkchat.tcl (tkchat::PasteDlg): Consider both selections, PRIMARY
+	and CLIPBOARD when initializing the paste dialog.
+	Added a <Button-3> binding to the main chat window as another
+	shortcut for the paste dialog.
+	
 2007-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Support whois information from IRC via the bridge.
